use RTK query for everything now and update endpoints logic and add a clear end point as well as adding a them swticher

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+	--color-dark-background-c: #151618;
+}
 
 body {
 	margin: 0;
