--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,4 @@
+/** biome-ignore-all lint/suspicious/noUnknownAtRules: tailwind*/
 @import "tailwindcss";
 @plugin "tailwindcss-react-aria-components";
 @custom-variant dark (&:where(.dark, .dark *));
